--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <h1>第一个网页</h1>
 <h2>hhhhhhhhhhhhhhhh</h2>
 <!-- 来自https://codesandbox.io/s/neon-841j6?file=/index.html:440-482 -->
-<a href="#" class="neon-button">Click Me</a>
+<a href="./aaa.html" class="neon-button">Click Me</a>
 </html>
